2005-02-26  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-autoconfig.c (validate): Removed the hard coded support url
	from translateable error message. Fixes #72514

2005-02-26  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-autoconfig.c (validate):
	* camel/camel-exchange-provider.c (exchange_validate_user_cb): Removed
	unnecessary memory allocation.

2005-02-26  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-folder-size.c : Modified most of the code for
	displaying the folder sizes in a sorted order. Also added code to
	update the store with new folder sizes, called after a refresh.
	* storage/exchange-folder-size.h : Similar
	* storage/exchange-hierarchy-webdav.c (rescan) : Fetch the folder
	sizes during a rescan as well.
	(exchange_hierarchy_webdav_parse_folder) : Now send a double value
	instead of a string for the folder size.
	Fixes #72104

2005-02-24  Sivaiah Nallagatla <snallagatla@novell.com>
                                                                                
        * addressbook/e-book-backend-exchange.c
        (e_book_backend_exchange_get_contact_list) :
        We should not be using e_data_book_respond_ calls, as we are
        a sync backend. Fixes #72946
        (e_book_backend_exchange_create_contact) :
        Don't use e_data_book_respond and don't
        return success here. We are in offline
        mode.
        Fixes #72945

2005-02-24  Hans Petter Jansson  <hpj@novell.com>

	* lib/e2k-autoconfig.c:
	* lib/test-utils.c:
	* storage/exchange-account.c:
	* storage/exchange-autoconfig-wizard.c:
	* storage/exchange-hierarchy-webdav.c:
	* storage/main.c:
	* storage/ximian-connector-setup.c:
	Update the includes for e-passwords.h to reflect its new location.

2005-02-20  Sushma Rai <rsushma@novell.com>

	* addressbook/e-book-backend-gal.c (func_is_or_begins_with): Allowing
	the query "beginswith fileAs" without any value, which is formed for
	building GAL cache. Fixes #72170