@@ -846,28 +846,34 @@ get_password (ExchangeAccount *account, E2kAutoconfig *ac, const char *errmsg)
 
 	password = e_passwords_get_password ("Exchange", account->priv->password_key);
 
-	if (!password && exchange_component_is_interactive (global_exchange_component)) {
-		char *prompt;
+	if (exchange_component_is_interactive (global_exchange_component)) {
+		if (!password) {
+			char *prompt;
 
-		prompt = g_strdup_printf (_("%sEnter password for %s"),
-					  errmsg, account->account_name);
-		oldremember = remember = account->priv->account->source->save_passwd;
-		password = e_passwords_ask_password (
-			_("Enter password"),
-			"Exchange", account->priv->password_key,
-			prompt, E_PASSWORDS_REMEMBER_FOREVER|E_PASSWORDS_SECRET,
-			&remember, NULL);
-		if (remember != oldremember) {
-			account->priv->account->source->save_passwd = remember;
+			prompt = g_strdup_printf (_("%sEnter password for %s"),
+						  errmsg, account->account_name);
+			oldremember = remember = 
+					account->priv->account->source->save_passwd;
+			password = e_passwords_ask_password (
+					_("Enter password"),
+					"Exchange", 
+					account->priv->password_key,
+					prompt, 
+					E_PASSWORDS_REMEMBER_FOREVER|E_PASSWORDS_SECRET,
+					&remember, 
+					NULL);
+			if (remember != oldremember) {
+				account->priv->account->source->save_passwd = remember;
+			}
+			g_free (prompt);
+		} 
+		else if (!account->priv->account->source->save_passwd) {
+			/* get_password returns the password cached but user has not 
+		 	 * selected remember password option, forget this password 
+		 	 * whis is stored temporarily by e2k_validate_user() 
+		 	 */
+			e_passwords_forget_password ("Exchange", account->priv->password_key);
 		}
-		g_free (prompt);
-	} 
-	else if (password && !account->priv->account->source->save_passwd) {
-		/* get_password returns the password cached but user has not 
-		 * selected remember password option, forget this password 
-		 * whis is stored temporarily by e2k_validate_user() 
-		 */
-		e_passwords_forget_password ("Exchange", account->priv->password_key);
 	}
 
 	if (password) {
